# ITBS_TAMANEGI-SENSEI

./: .gitignore  README.md
composition_advisor/: README.md  pyproject.toml
composition_advisor/composition_advisor/: __init__.py  cli.py
composition_advisor/composition_advisor/analyze/: chord_detector.py  degree_assigner.py  key_detector.py  note_annotations.py  voice_extractor.py
composition_advisor/composition_advisor/critique/: config.py  runner.py  species_runner.py
composition_advisor/composition_advisor/critique/rules/: bass_below.py  chord_tone_check.py  hidden_motion.py  imitation_check.py  multi_voice_voicing.py  parallel_motion.py  range_check.py  semitone_clash.py  voice_crossing.py
composition_advisor/composition_advisor/fix/: applier.py  llm.py  rule_based.py
composition_advisor/composition_advisor/io/: midi_loader.py  normalize.py  transpose.py
composition_advisor/composition_advisor/llm/: claude_client.py  prompt_builder.py
composition_advisor/composition_advisor/model/: fix.py  issue.py  score.py  slice.py
composition_advisor/composition_advisor/tutor/: cantus_firmus.py  feedback_prompt.py  lesson_runner.py  tracks.py
composition_advisor/examples/: jazz.yaml  minimal.py
composition_advisor/tests/: conftest.py  test_fix.py  test_rules.py  test_species.py
composition_advisor/tests/fixtures/: _make_clash.py  _make_fix_targets.py  _make_simple.py  _make_species1.py  clash_lower.mid  clash_treble.mid  fix_bass.mid  fix_piano.mid  simple_bass.mid  simple_chord.mid  simple_melody.mid  species1_bad.mid  species1_cf.mid  species1_good.mid
(+10 files in other folders)
